# PongRL

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train_ddpg.py  train_double.py  train_model.py  train_single.py
experiments/: train_ddpg.py  train_ddqn.py  train_double.py  train_pole.py  train_single.py
pong/: agent.py  environment.py  renderer.py
src/pong/: agent.py  environment.py  renderer.py
tests/: test_x11.py  train_pole.py
