[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pong"
dynamic = ["version"]
description = "Game environment to train a DQN on pong."
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Marcel König", email = "contact@marcelkoenig.dev" },
]
keywords = [
    "pong",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "pygame",
    "tqdm",
    "tensorflow>=2.6 ; sys_platform != 'darwin'",
    "tensorflow-macos>=2.6 ; sys_platform == 'darwin'",
    "tensorflow-metal ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/mkoenig-dev/PongRL"

[tool.hatch.version]
path = "src/pong/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/pong",
    "/test"
]

[tool.hatch.envs.default]
features = [
    "dev"
]